Added EventuateKafkaContainer to simplify testing of https://github.com/eventuate-tram/eventuate-tram-core/issues/181. Upgraded Kafka broker to support dynamic reconfiguring of advertised listener. Improving testing and misc improvements.